edits to intro and background

--- a/index.html
+++ b/index.html
@@ -73,11 +73,7 @@
         <br><br><br><br><br><br><br><br><br><br>
 
         <div class="copyright">
-          Permission to make digital or hard copies of part or all of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. Copyrights for third-party components of this work must be honored. For all other uses, contact the Owner/Author. <br>
-          Copyright is held by the owner/author(s).<br>
-          <i>IDC '15</i>, June 21-25, 2015, Medford, MA, USA<br>
-          ACM 978-1-4503-3590-4/15/06.<br>
-          <a href="http://dx.doi.org/10.1145/2771839.2771866" style="color: black; text-decoration: none;">http://dx.doi.org/10.1145/2771839.2771866</a>
+          Copyright notice.
         </div>
         
         <div class="column left" style="height: 5.8in;"></div>
@@ -160,10 +156,10 @@
         Strawbies is a tangible programming game designed for children ages 5 and up that combines the use of inexpensive tangible tiles and real-time computer vision through a stationary iPad tablet (Figure 1). Players arrange wooden tiles to guide the movement of an onscreen character (Awbie) through a rich and infinitely expanding world filled with obstacles, thieving rodents, and strawberries. Strawbies is portable, inexpensive, and fluidly interactive. These features are made possible by the use of an Osmo game system (playosmo.com) that uses a mirror to reflect images in front of the iPad through the front­-facing camera. In creating Strawbies, we sought to explore new possibilities opened by this system to create an engaging and collaborative game for wide range of ages and playstyles.
       </p>
       <p>
-        To this point, tangible programming systems have had to make tradeoffs between inexpensive materials, portability, and real-time interaction. Many tangible programming systems have opted to use “smart” tangible components with embedded electronics and power supplies (e.g. [Gross-roBlox, McNerney, Wyeth]). This has the advantage of offering real-time interactive systems that can be used anywhere, with the downside that these systems are relatively expensive to create and manufacture. Other tangible programming systems have instead opted to use computer vision and “passive” tangible blocks or tiles (e.g. [Horn’12]). But, the ability to continuously track and respond to programming blocks has either required a stationary overhead camera fixture or an interactive surface with built-­in camera hardware. It is possible to instead use a mobile device like an iPad, but this requires a point-­and­-shoot style of interaction (e.g. [Cite Kibo/Roberto]) in which real-time interaction is sacrificed for the sake of portability. The Osmo's use of a mirror over the top of the iPad’s front-facing camera makes it possible to obtain the best of both worlds by combining fluid, real-­time interaction with a mobile device and low-­cost tangible materials. 
+        To this point, tangible programming systems have had to make tradeoffs between inexpensive materials, portability, and real-time interaction. Many tangible programming systems have opted to use “smart” tangible components with embedded electronics and power supplies (e.g. [Schweikardt08, <cite ref="mcnerney-2004"></cite>, <cite ref="wyeth-2008"></cite>]). This has the advantage of offering real-time interactive systems that can be used anywhere, with the downside that these systems are relatively expensive to create and manufacture. Other tangible programming systems have instead opted to use computer vision and “passive” tangible blocks or tiles (e.g. [Horn’12]). But, the ability to continuously track and respond to programming blocks has either required a stationary overhead camera fixture or an interactive surface with built-­in camera hardware. It is possible to instead use a mobile device like an iPad, but this requires a point-­and­-shoot style of interaction (e.g. [Cite Kibo/Roberto]) in which real-time interaction is sacrificed for the sake of portability. The Osmo's use of a mirror over the top of the iPad’s front-facing camera makes it possible to obtain the best of both worlds by combining fluid, real-­time interaction with a mobile device and low-­cost tangible materials. 
       </p>
       <p>
-        We believe that these characteristics open opportunities for designers to create engaging tangible programming systems that are accessible to a much broader audience. Our aim with Strawbies is to explore this design space. Early on we discovered that despite the innovation of the Osmo, achieving our design goals was more difficult than we imagined. We struggled with both the game design and the programming block design over many iterations before we felt that we had achieved a system that was inviting, engaging, and easy for children to learn on. Testing sessions with children in homes, schools, out-of-school programs, and a children’s museum offered us quick feedback and helped us articulate design principles to support a versatile and engaging programming game. In this paper we describe our design process in more detail and share insights from our evaluation sessions. 
+        We believe that these characteristics open opportunities for designers to create engaging tangible programming systems that are accessible to a much broader audience. Our aim with Strawbies is to explore this design space. Early on we discovered that despite the innovation of the Osmo, achieving our design goals was more difficult than we anticipated. We struggled with both the game design and the programming block design over many iterations before we felt that we had achieved a system that was inviting, engaging, and easy for children to learn with. Testing sessions with children in homes, schools, out-of-school programs, and a children’s museum offered us quick feedback and helped us articulate design principles to support a versatile and engaging programming game. In this paper we describe our design process in more detail and share insights from our evaluation sessions. 
       </p>
 
       <h1>Related Work</h1>
@@ -179,6 +175,7 @@
         <cite ref="roblocks08"></cite>,
         <cite ref="sapounidis-2013"></cite>,
         <cite ref="sipitakiat-2012"></cite>,
+        <cite ref="sullivan-2015"></cite>,
         <cite ref="weintrop-2013"></cite>,
         <cite ref="wyeth-2008"></cite>]
         (see also [<cite ref="mcnerney-2004"></cite>] for an excellent account of older work dating back to the 1970s). 
@@ -414,6 +411,14 @@
       <li id="weintrop-2013">Weintrop, D., &amp; Wilensky, U. (2013). RoboBuilder: A Computational Thinking Game. In <i>Proc. ACM Technical Symposium on Computer Science Education</i>, 736-736.</li>
       <li id="wyeth-2008">Wyeth, P. (2008). How young children learn to program with sensor, action, and logic blocks. <i>Journal of the Learning Sciences, 17</i>(4), 517-550.</li> 
       </ol>
+<!--
+McNerney, T. S. (2004). From turtles to Tangible Programming Bricks: explorations in physical language design. Personal and Ubiquitous Computing, 8(5), 326-337.
+
+Schweikardt, Eric, and Mark D. Gross. "The robot is the program: interacting with roBlocks." Proceedings of the 2nd international conference on Tangible and embedded interaction. ACM, 2008.
+
+Sullivan, Amanda, Mollie Elkin, and Marina Umaschi Bers. "KIBO robot demo: engaging young children in programming and engineering." Proceedings of the 14th International Conference on Interaction Design and Children. ACM, 2015.
+-->
+
     </div>
     <div id="reference-details"></div>
   </body>
