edits to open world section

--- a/index.html
+++ b/index.html
@@ -347,36 +347,41 @@
 
       <h2 class="no-number">Open World Environment</h2>
       <p>
-        Our first game had a linear narrative, consisting of a series of puzzles [figure]. The player puts down a sequence of blocks, presses start and watches the character navigate through the puzzle. If the character ran into water, the level would restart from the beginning. This style was heavily influenced by Hour of Code’s Introduction to Code series [CITE]. We found this approach to be ineffective in open and collaborative spaces with multiple players on the same device. It was difficult for players to collaborate, as there was usually only one answer to each problem. New players also had trouble understanding the game, as each new level used ideas introduced in previous levels. The game was also all around difficult, and failed to be engaging.
+        Our first iteration of the game had a linear narrative structure, consisting of a series of maze-like puzzles [figure]. Players puts down a sequence of blocks, pressed start, and watched the character navigate through the puzzle. If the character ran into water, the level would restart from the beginning. This style was heavily influenced by Hour of Code’s Introduction to Code series [CITE]. But we found that this approach was not motivating or effective in open and collaborative spaces with multiple players on the same device. It was difficult for players to collaborate when there was only one answer to a problem. New players also had trouble understanding the game, as each new level used ideas introduced in previous levels. 
+        <!-- The game was also all around difficult, and failed to be engaging. -->
       </p>
       <p>
-        For the next iteration, we moved away from the classic puzzle game [CITE Costikyan, Flanagan], which tend to be competitive, linear, and have binary win/lose states. We instead focused on developing a game which encouraged collaboration between players across different experience levels and ages by supporting different play-styles. This meant that we had to create a more networked game, one which had real decisions with equally plausible outcomes. [CITE] 
+        For the next iteration, we moved away from the classic puzzle game [CITE Costikyan, Flanagan], which tends to emphasize competitive and linear play with only one (or a small number) of correct answers. We instead focused on developing a game which encouraged collaboration between players across different experience levels and ages by supporting different play-styles.
+        <!--  This meant that we had to create a more networked game, one which had real decisions with equally plausible outcomes. [CITE] -->
       </p>
       <p>
-        We decided to structure our game around a randomly generated open world environment, filled with interactable objects like strawberries, rats, cactuses, trees, water, animals, and more [figure]. We took out win/lose states, and instead introduced a more gradual build up of possessions that players could acquire. For example, finding seeds in the world allows you to grow strawberry plants in your farm. Making contact with undesired objects such as rats and cactuses sets Awbie off of a projected path, which deter players from further running into obstacles.
+        We decided instead to structure our game around a randomly generated open world environment, filled with interactable objects like strawberries, rats, cactuses, trees, water, animals, and more [figure]. We took out win/lose states, and instead introduced a more gradual build up of possessions that players could acquire. For example, finding seeds in the world allows you to grow strawberry plants in your farm. Making contact with undesired objects such as rats and cactuses sets Awbie off of a projected path, which deter players from further running into obstacles.
       </p>
       <p>
-        We hoped that by having an expansive world filled strawberries and other objects in all directions, we set up a space for more open-ended and light-hearted collaboration There are multiple right answers, and there are no wrong answers. We also wanted to encourage planning, but wanted to do it in a way that was fun. 
+        We hoped that an expansive world filled strawberries and other objects would encourage more open-ended and light-hearted collaboration There are no wrong answers. We also wanted to encourage planning, but wanted to do it in a way that was less forced and more fun. 
       </p>
       <p>
-        There was still structure in the game. We introduced lakes, with lilypads that lead to a treasure island in the middle  [figure]. To get to the island, players had to use a sequence of blocks that would get the character to the island. If the sequence did not do so, the character falls into the water and is transported back to the start of the lake. This gave players the option to explore more difficult puzzles, but they are free to move on if they wish.
+        There was still structure in the game. We introduced lakes, with lilypads that lead to a treasure island in the middle  [figure]. To get to the island, players must use a sequence of blocks that would guide the character all the way to the island. The character falls into the water if it takes a misstep and is transported back to the start of the lake. This give players the option to explore more difficult puzzles, but they are also free to skip the lake and move on if they want.
       </p>
       <p>
-        We also introduced “Frenzy Mode”, a fun animation that Awbie goes into when he is about to get multiple Strawbies with one sequence of blocks. This results in more Strawbies, a quicker movement speed, and fun animations. We felt that this was another example of adding structure into what is otherwise an open world game.
+        We also introduced “Frenzy Mode”, a fun animation that Awbie goes into when he is about to get multiple Strawbies with one sequence of blocks. This results in more Strawbies, a quicker movement speed, and playful animations. We felt that this was another example of adding structure into what is otherwise an open world game.
       </p>
       <h3>Evaluation</h3>
       <p>
-        We noticed a big change in how players interacted with the game upon introducing an open-world environment. We heard a lot more conversations about decisions and goals, much like this excerpt from a conversation between two boys in Grade 2: P1: “Let’s keep going. Wait actually I think I see up” P2: “No I think we should go down.” P1: “Yeah but if we go up we can use Tornado!”.
+        We noticed a big change in how players interacted with the game after we introduced the open-world environment. We heard a lot more conversations about decisions and goals, much like this excerpt from a conversation between two boys in Grade 2: P1: “Let’s keep going. Wait actually I think I see up” P2: “No I think we should go down.” P1: “Yeah but if we go up we can use Tornado!”.
       </p>
       <p>
         We also observed groups of children with different tendencies play together. In one example, a boy and girl in Kindergarten are playing, and the boy continuously to Rainbow around the world. The girl says “See! We’re not getting any Strawbies.” After some discussion, the boy conceded, and the girl moved her sequence of blocks in front of the iPad.
       </p>
       <p>
-        Lakes were also effective. Many of our players understood that a more exact and elaborate sequence was necessary to reach the middle treasure island. Some players attempted to solve the puzzle, but others moved onto other goals. We saw the same behavior with Frenzy Mode. Many children only attempted chaining upon reaching a large obvious chain of Strawbies, while others attempted chaining at every possibility. Players were delighted when they pulled off a successful chain, and we thought that was a good example of integrated learning.
+        Lakes were also effective. Many of our players understood that a more exact and elaborate sequence was necessary to reach the middle treasure island. Some players attempted to solve the puzzle, but others moved on to other goals. We saw the same behavior with Frenzy Mode. Many children only attempted chaining upon reaching a large obvious chain of Strawbies, while others attempted chaining at every possibility. Players showed signs of delight when they pulled off a successful chains.
+        <!-- , and we thought that was a good example of integrated learning.-->
       </p>
+      <!--
       <p>
         The open world environment is fun and inviting: players can come and go with ease, and play the game how they wish. The environment is collaborative, supporting typical classroom struggles such turn-taking, sharing, and differing goals. The environment is simple and complex: players can learn at their own pace, and build more complex sequences as they wish. 
       </p>
+      -->
       
       <h1>Conclusion</h1>
       <p>
